[tool.poetry]
name = "sparkcongestionstreaming"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "^0.8.1"
mypy = "^1.5.1"
pylint = "^2.17.5"
findspark = "^2.0.1"
pyspark = "3.3.0"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
